--- a/blog.html
+++ b/blog.html
@@ -127,7 +127,7 @@
 		</form>
 	</div>
 	
-</div>	<div class="jumbotron jumbotron-single d-flex align-items-center" style="background-image: url(img/bg.webp;)">
+</div>	<div class="jumbotron jumbotron-single d-flex align-items-center" style="background-image: url(img/bg.jpg)">
   <div class="container text-center">
     <h1 class="display-2 mb-4">Blog</h1>
   </div>
