--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
      - https://gettemplates.co/roxy
     -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <title>Mas que un cambio
     </title>
     <meta name="description" content="Mas que un cambio">
