--- a/single.html
+++ b/single.html
@@ -7,7 +7,7 @@
      - https://gettemplates.co/roxy
     -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <title>Roxy by GetTemplates.co</title>
     <meta name="description" content="Roxy">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
