--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     -->
     <meta charset="utf-8">
     <meta https-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Roxy by GetTemplates.co</title>
+    <title>Mas que un cambio</title>
     <meta name="description" content="Roxy">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -35,7 +35,7 @@
 	<div id="side-nav" class="sidenav">
 	<a href="javascript:void(0)" id="side-nav-close">&times;</a>
 	
-	<div class="sidenav-content">
+	<!--<div class="sidenav-content">
 		<p>
 			Kuncen WB1, Wirobrajan 10010, DIY
 		</p>
@@ -43,7 +43,7 @@
 			<span class="fs-16 primary-color">(+68) 120034509</span>
 		</p>
 		<p>info@yourdomain.com</p>
-	</div>
+	</div>-->
 </div>	<div id="side-search" class="sidenav">
 	<a href="javascript:void(0)" id="side-search-close">&times;</a>
 	<div class="sidenav-content">
@@ -64,7 +64,7 @@
 </div>	<nav id="header-navbar" class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center text-white" href="/">
-            <h3 class="font-weight-bolder mb-0">ROXY</h3>
+            <h3 class="font-weight-bolder mb-0">Mas que un cambio</h3>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header" aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
             <span class="lnr lnr-menu"></span>
@@ -72,33 +72,33 @@
         <div class="collapse navbar-collapse" id="navbar-nav-header">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="about.html">Propuestas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="blog.html">Blog</a>
+                    <a class="nav-link" href="blog.html">Bio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html">Contacto</a>
                 </li>
                 <li class="nav-item">
                     <a id="side-search-open" class="nav-link" href="#">
                         <span class="lnr lnr-magnifier"></span>
                     </a>
                 </li>
-                 <li class="nav-item only-desktop">
+                 <!--<li class="nav-item only-desktop">
                     <a class="nav-link" id="side-nav-open" href="#">
                         <span class="lnr lnr-menu"></span>
                     </a>
-                </li>
+                </li>-->
             </ul>
         </div>
     </div>
 </nav>
 
-<div id="side-nav" class="sidenav">
+<!--<div id="side-nav" class="sidenav">
 	<a href="javascript:void(0)" id="side-nav-close">&times;</a>
 	
 	<div class="sidenav-content">
@@ -109,7 +109,7 @@
 			<span class="fs-16 primary-color">(+68) 120034509</span>
 		</p>
 		<p>info@yourdomain.com</p>
-	</div>
+	</div>d-->
 </div><div id="side-search" class="sidenav">
 	<a href="javascript:void(0)" id="side-search-close">&times;</a>
 	<div class="sidenav-content">
@@ -129,36 +129,36 @@
 	
 </div>	<div class="jumbotron jumbotron-single d-flex align-items-center" style="background-image: url(img/bg.jpg)">
   <div class="container text-center">
-    <h1 class="display-2 mb-4">About</h1>
+    <h1 class="display-2 mb-4">Propuestas</h1>
   </div>
 </div>	<section id="who-we-are" class="bg-white">
     <div class="container">
         <div class="section-content">
             <div class="title-wrap" data-aos="fade-up">
-                <h2 class="section-title">The easiest way <br>to build<b> websites online</b></h2>
+                <h2 class="section-title">Lo que proyectamos <br>en el municipio <b> para la gente</b></h2>
                 <p class="section-sub-title">Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nulla vitae elit libero, a <br> pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
             </div>
             
             <div class="row text-center">
                 <div class="col-md-4 col-sm-6" data-aos="fade-up">
                     <img class="rounded-circle" src="img/icons/animat-checkmark.gif" alt="Generic placeholder image" width="140" height="140">
-                    <h5 class="mb-4">Simple and Clean</h5>
-                    <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-link" href="#" role="button">View details</a></p>
+                    <h5 class="mb-4">Simple Y limpio</h5>
+                    <p>Nos comprometemos a mejorar la calidad de la limpieza.</p>
+                    <p><a class="btn btn-link" href="#" role="button">Ver detalles del proyecto</a></p>
                 </div>
                 <!-- /.col-md-4 col-sm-6  -->
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                     <img class="rounded-circle" src="img/icons/animat-customize.gif" alt="Generic placeholder image" width="140" height="140">
-                    <h5 class="mb-4">Easy to Customize</h5>
-                    <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Vestibulum id ligula porta felis.</p>
-                    <p><a class="btn btn-link" href="#" role="button">View details</a></p>
+                    <h5 class="mb-4">Nos comprometemos al cambio</h5>
+                    <p>Adaptandonos a las nuevas tecnologias</p>
+                    <p><a class="btn btn-link" href="#" role="button">Ver detalles</a></p>
                 </div>
                 <!-- /.col-md-4 col-sm-6  -->
                 <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="400">
                     <img class="rounded-circle" src="img/icons/animat-responsive.gif" alt="Generic placeholder image" width="140" height="140">
-                    <h5 class="mb-4">Fully Responsive</h5>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. </p>
-                    <p><a class="btn btn-link" href="#" role="button">View details</a></p>
+                    <h5 class="mb-4">Aplicacion para el municipio</h5>
+                    <p>Una aplicacion centralizada para todos los tramites. </p>
+                    <p><a class="btn btn-link" href="#" role="button">Ver proyecto</a></p>
                 </div>
                 <!-- /.col-md-4 col-sm-6  -->
             </div>
@@ -174,7 +174,7 @@
                     <!-- Skill Item -->
                     <div class="skill-item">
                         <div class="d-flex justify-content-between">
-                             <p>HTML5</p>
+                             <p>Limpieza</p>
                             <p class="text-muted">90%</p>
                         </div>
                         <div class="progress" data-percent="90%">
@@ -185,7 +185,7 @@
                     <!-- Skill Item -->
                     <div class="skill-item">
                         <div class="d-flex justify-content-between">
-                            <p>CSS3</p>
+                            <p>Comunicacion</p>
                             <p class="text-muted">85%</p>
                         </div>
                          <div class="progress" data-percent="85%">
@@ -196,7 +196,7 @@
                     <!-- Skill Item -->
                     <div class="skill-item">
                         <div class="d-flex justify-content-between">
-                            <p>JQUERY</p>
+                            <p>Infraestructura</p>
                             <p class="text-muted">73%</p>
                         </div>
                          <div class="progress" data-percent="73%">
@@ -209,7 +209,7 @@
                     <!-- Skill Item -->
                     <div class="skill-item">
                         <div class="d-flex justify-content-between">
-                            <p>Adobe Photoshop</p>
+                            <p>Mano de Obra</p>
                             <p class="text-muted">80%</p>
                         </div>
                          <div class="progress" data-percent="80%">
@@ -220,7 +220,7 @@
                     <!-- Skill Item -->
                     <div class="skill-item">
                         <div class="d-flex justify-content-between">
-                            <p>Adobe Illustrator</p>
+                            <p>Algo</p>
                             <p class="text-muted">60%</p>
                         </div>
                          <div class="progress" data-percent="60%">
@@ -231,7 +231,7 @@
                     <!-- Skill Item -->
                     <div class="skill-item">
                         <div class="d-flex justify-content-between">
-                            <p>Wordpress</p>
+                            <p>Aplicacion</p>
                             <p class="text-muted">55%</p>
                         </div>
                          <div class="progress" data-percent="55%">
@@ -249,8 +249,8 @@
         <div class="section-content" data-aos="fade-up">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h2 class="mb-2">Make a beautiful website, or million of them</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, veritatis qui eligendi delectus quia fuga!</p>
+                    <h2 class="mb-2">Mas que un Cambio</h2>
+                    <p>Una Realidad</p>
                     <a class="btn btn-outline-primary btn-lg">FEATURES</a>
                 </div>
             </div>
