--- a/about.html
+++ b/about.html
@@ -251,7 +251,7 @@
                 <div class="col-md-12 text-center">
                     <h2 class="mb-2">Mas que un Cambio</h2>
                     <p>Una Realidad</p>
-                    <a class="btn btn-outline-primary btn-lg">FEATURES</a>
+                    <a class="btn btn-outline-primary btn-lg">Inicio</a>
                 </div>
             </div>
         </div>
@@ -265,7 +265,7 @@
          		
          	</div>
          	<div class="col-lg-4 col-md-12 d-flex align-items-center">
-         		<p class="mx-auto text-center mb-0">&copy; 2019 Roxy. Design by <a href="https://gettemplates.co" target="_blank">GetTemplates</a>.</p>
+         		<p class="mx-auto text-center mb-0">&copy; Sistemas Upro <a href="masqueuncambio.com.ar" target="_blank">Inicio</a>.</p>
          	</div>
            
             <div class="col-lg-4 col-md-12">
