--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                     <a class="nav-link" href="about.html">Propuestas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="blog.html">Bio</a>
+                    <a class="nav-link" href="blog.html">Noticias</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contacto</a>
