--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     -->
     <meta charset="utf-8">
     <meta https-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Roxy by GetTemplates.co</title>
+    <title>Mas que un cambio</title>
     <meta name="description" content="Roxy">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -35,7 +35,7 @@
 	<div id="side-nav" class="sidenav">
 	<a href="javascript:void(0)" id="side-nav-close">&times;</a>
 	
-	<div class="sidenav-content">
+	<!--<div class="sidenav-content">
 		<p>
 			Kuncen WB1, Wirobrajan 10010, DIY
 		</p>
@@ -43,7 +43,7 @@
 			<span class="fs-16 primary-color">(+68) 120034509</span>
 		</p>
 		<p>info@yourdomain.com</p>
-	</div>
+	</div>-->
 </div>	<div id="side-search" class="sidenav">
 	<a href="javascript:void(0)" id="side-search-close">&times;</a>
 	<div class="sidenav-content">
@@ -64,7 +64,7 @@
 </div>	<nav id="header-navbar" class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center text-white" href="/">
-            <h3 class="font-weight-bolder mb-0">ROXY</h3>
+            <h3 class="font-weight-bolder mb-0">Mas que un cambio</h3>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header" aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
             <span class="lnr lnr-menu"></span>
@@ -72,26 +72,26 @@
         <div class="collapse navbar-collapse" id="navbar-nav-header">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="about.html">Propuestas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="blog.html">Blog</a>
+                    <a class="nav-link" href="blog.html">Noticias</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html">Contacto</a>
                 </li>
                 <li class="nav-item">
                     <a id="side-search-open" class="nav-link" href="#">
                         <span class="lnr lnr-magnifier"></span>
                     </a>
                 </li>
-                 <li class="nav-item only-desktop">
+                <!-- <li class="nav-item only-desktop">
                     <a class="nav-link" id="side-nav-open" href="#">
                         <span class="lnr lnr-menu"></span>
-                    </a>
+                    </a>-->
                 </li>
             </ul>
         </div>
@@ -127,7 +127,7 @@
 		</form>
 	</div>
 	
-</div>	<div class="jumbotron jumbotron-single d-flex align-items-center" style="background-image: url(img/bg.jpg)">
+</div>	<div class="jumbotron jumbotron-single d-flex align-items-center" style="background-image: url(img/background.png)">
   <div class="container text-center">
     <h1 class="display-2 mb-4">Blog</h1>
   </div>
@@ -136,8 +136,8 @@
     <div class="container">
         <div class="section-content">
             <div class="title-wrap mb-5" data-aos="fade-up">
-                <h2 class="section-title">Latest <b>news</b></h2>
-                <p class="section-sub-title">Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+                <h2 class="section-title">Ultimas <b>Noticias</b></h2>
+                <p class="section-sub-title">Una breve descripcion de la pagina de noticias.</p>
             </div>
             <div class="row">
                 <!-- Blog -->
@@ -147,24 +147,24 @@
                         <div class="col-md-4 blog-item-wrapper" data-aos="fade-up">
                             <div class="blog-item">
                                 <div class="blog-img">
-                                    <a href="single.html"><img src="img/blog-1.jpg" alt=""></a>
+                                    <a href="single.html"><img src="img/DSC_1486.jpg" alt=""></a>
                                 </div>
                                 <div class="blog-text">
                                     <div class="blog-tag">
-                                        <a href="#"><h6><small>CODE</small></h6></a>
+                                        <a href="#"><h6><small>Upro</small></h6></a>
                                     </div>
                                     <div class="blog-title">
-                                        <a href="single.html"><h4>Amazing Blog Title</h4></a>
+                                        <a href="single.html"><h4>Increible Noticia</h4></a>
                                     </div>
                                     <div class="blog-meta">
-                                        <p class="blog-date">30 May 2016</p> /
+                                        <p class="blog-date">13 marzo 2023</p> /
                                         <p class="blog-comment"><a href="">23 Comments</a></p>
                                     </div>
                                     <div class="blog-desc">
-                                        <p>Lorem ipsum dolor sit amet con sectetur adipiscing elit sed do eiu smod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>breve descripcion de la noticia.</p>
                                     </div>
                                     <div class="blog-author">
-                                        <p>by John Doe</p>
+                                        <p>by Jzepol</p>
                                     </div>
                                     <div class="blog-share-wrapper">
                                         <a class="blog-share" href="google.com">
@@ -182,24 +182,24 @@
                         <div class="col-md-4 blog-item-wrapper" data-aos="fade-up" data-aos-delay="200">
                             <div class="blog-item">
                                 <div class="blog-img">
-                                    <a href="#"><img src="img/blog-2.jpg" alt=""></a>
+                                    <a href="#"><img src="img/_DSC1861.jpg" alt=""></a>
                                 </div>
                                 <div class="blog-text">
                                     <div class="blog-tag">
-                                        <a href="#"><h6><small>SPORTS</small></h6></a>
+                                        <a href="#"><h6><small>Politica</small></h6></a>
                                     </div>
                                     <div class="blog-title">
-                                        <a href="#"><h4>Amazing Blog Title</h4></a>
+                                        <a href="#"><h4>Union Estrategica</h4></a>
                                     </div>
                                     <div class="blog-meta">
-                                        <p class="blog-date">30 May 2016</p> /
+                                        <p class="blog-date">30 May 2023</p> /
                                         <p class="blog-comment"><a href="">23 Comments</a></p>
                                     </div>
                                     <div class="blog-desc">
-                                        <p>Lorem ipsum dolor sit amet con sectetur adipiscing elit sed do eiu smod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>Joaco y el Gato se unen</p>
                                     </div>
                                     <div class="blog-author">
-                                        <p>by John Doe</p>
+                                        <p>by Morinacho</p>
                                     </div>
                                     <div class="blog-share-wrapper">
                                         <a class="blog-share" href="google.com">
@@ -217,17 +217,17 @@
                         <div class="col-md-4 blog-item-wrapper" data-aos="fade-up" data-aos-delay="400">
                             <div class="blog-item">
                                 <div class="blog-img">
-                                    <a href="#"><img src="img/blog-3.jpg" alt=""></a>
+                                    <a href="#"><img src="img/taller.jpg" alt=""></a>
                                 </div>
                                 <div class="blog-text">
                                     <div class="blog-tag">
-                                        <a href="#"><h6><small>ECONOMY</small></h6></a>
+                                        <a href="#"><h6><small>Trabajo</small></h6></a>
                                     </div>
                                     <div class="blog-title">
-                                        <a href="#"><h4>Amazing Blog Title</h4></a>
+                                        <a href="#"><h4>Talleres</h4></a>
                                     </div>
                                     <div class="blog-meta">
-                                        <p class="blog-date">30 May 2016</p> /
+                                        <p class="blog-date">12 Marzo 2023</p> /
                                         <p class="blog-comment"><a href="">23 Comments</a></p>
                                     </div>
                                     <div class="blog-desc">
@@ -261,9 +261,9 @@
         <div class="section-content" data-aos="fade-up">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h2 class="mb-2">Make a beautiful website, or million of them</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, veritatis qui eligendi delectus quia fuga!</p>
-                    <a class="btn btn-outline-primary btn-lg">FEATURES</a>
+                    <h2 class="mb-2">Mas que un cambio</h2>
+                    <p>Suscribite al canal de notificaciones</p>
+                    <a class="btn btn-outline-primary btn-lg">Unirse</a>
                 </div>
             </div>
         </div>
@@ -277,7 +277,7 @@
          		
          	</div>
          	<div class="col-lg-4 col-md-12 d-flex align-items-center">
-         		<p class="mx-auto text-center mb-0">&copy; 2019 Roxy. Design by <a href="https://gettemplates.co" target="_blank">GetTemplates</a>.</p>
+         		<p class="mx-auto text-center mb-0">&copy; 2023 Mas que un Cambio <a href="" target="_blank">Inicio</a>.</p>
          	</div>
            
             <div class="col-lg-4 col-md-12">
