--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 	
 </div>	<div class="jumbotron d-flex align-items-center">
   <div class="container text-center">
-    <img src="img/masqueuncambio.png" alt="Imagen central Mas que un cambio">
+    <img src="img/Portada_Mesa de trabajo 1.png" alt="joaquin surroca">
 
-  </div>
+</div>
   <div class="rectangle-1"></div>
   <div class="rectangle-2"></div>
   <div class="rectangle-transparent-1"></div>
