--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 </div>	<div class="jumbotron d-flex align-items-center">
   <div class="container text-center">
     <img src="img/Portada_Mesa de trabajo 1.png" alt="joaquin surroca">
+    <h2>Ing. Joaquin Surroca</h2>
 
 </div>
   <div class="rectangle-1"></div>
@@ -130,9 +131,9 @@
             <!-- Section Title -->
             <div class="title-wrap mb-5" data-aos="fade-up">
                 <h2 class="section-title">
-                    A template built by <a href="https://gettemplates.co" target="_blank">GetTemplates.co</a>
+                    LO HICIMOS EN LA <strong>UPRO</strong>, LO HAREMOS EN LA <strong>CIUDAD</strong>
                 </h2>
-                <p class="section-sub-title">Praesent commodo cursus magna, vel scelerisque nisl consectetur et. <br> pharetra augue. Donec id elit non mi.</p>
+                <p class="section-sub-title">Algunas propuesta que mejoraran nuestra ciudad</p>
             </div>
             <!-- End of Section Title -->
             <div class="row">
@@ -145,15 +146,15 @@
                                 <div class="my-4">
                                     <i class="lnr lnr-cog fs-40"></i>
                                 </div>
-                                <h4>Easy to Customize</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h4>REFACCIÓN DE ESCUELAS</h4>
+                                <p>Re funcionalización y mantenimiento anual de 47 escuelas.</p>
                             </div>
                             <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
                                 <div class="my-4">
                                     <i class="lnr lnr-frame-contract fs-40"></i>
                                 </div>
-                                <h4>Pixel Perfect</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h4>POLO DE EMPRENDEDORES</h4>
+                                <p>Creación de un espacio específico para el desarrollo de emprendedores.</p>
                             </div>
                         </div>
                         <!-- End of Feature Item -->
@@ -163,15 +164,15 @@
                                 <div class="my-4">
                                     <i class="lnr lnr-bubble fs-40"></i>
                                 </div>
-                                <h4>Full Support</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h4>DEPORTES</h4>
+                                <p>Creación de la Facultad del Deporte, dependiente de UPrO</p>
                             </div>
                             <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
                                 <div class="my-4">
                                     <i class="lnr lnr-magic-wand fs-40"></i>
                                 </div>
-                                <h4>Clean Design</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h4>TRATAMIENTO DE RESIDUOS</h4>
+                                <p>Construcción de recicladora con capacidades productivas.</p>
                             </div>
                         </div>
                         <!-- End of Feature Item -->
@@ -181,15 +182,15 @@
                                 <div class="my-4">
                                     <i class="lnr lnr-clock fs-40"></i>
                                 </div>
-                                <h4>Ontime Project</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h4>CENTRO DE ADICCIONES</h4>
+                                <p>Creación de rspacio de rehabilitación para pacientes con desordenes adictivos</p>
                             </div>
                             <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
                                 <div class="my-4">
                                     <i class="lnr lnr-thumbs-up fs-40"></i>
                                 </div>
-                                <h4>Built with SASS</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <h4>REFUGIO DE MUJERES</h4>
+                                <p>Lugar adecuado y adaptado a las necesidades de mujeres violentadas   .</p>
                             </div>
                         </div>
                         <!-- End of Feature Item -->
