--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             </div>
                             <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
                                 <div class="my-4">
-                                    <i class="lnr lnr-frame-contract fs-40"></i>
+                                    <p class="icon-svg"><img src="/img/icons/trash.svg" id="trash" alt=""></p>
                                 </div>
                                 <h4>POLO DE EMPRENDEDORES</h4>
                                 <p>Creación de un espacio específico para el desarrollo de emprendedores.</p>
