--- a/index.html
+++ b/index.html
@@ -408,6 +408,6 @@
         }
 });
     </script>
-    <a id="wspweb-icon" href="https://www.whatsapp.com"><img src="/img/icons/whatsapp.png" alt="whatsapp web" data-toggle="tooltip" data-placement="top" title="Escribeme todas tus inquietudes"></a>
+    <a id="wspweb-icon" href="https://www.whatsapp.com"><img src="./img/icons/whatsapp.png" alt="whatsapp web" data-toggle="tooltip" data-placement="top" title="Escribeme todas tus inquietudes"></a>
 </body>
 </html>
